--- a/src/basic/CMakeLists.txt
+++ b/src/basic/CMakeLists.txt
@@ -11,3 +11,5 @@ target_include_directories(${target_name}
  "${PROJECT_SOURCE_DIR}/include"
  "${PROJECT_BINARY_DIR}"
 )
+
+export(TARGETS ${target_name} FILE ${PROJECT_BINARY_DIR}/${target_name}_target.cmake )
