ajouter le target helloworld

--- a/mains/CMakeLists.txt
+++ b/mains/CMakeLists.txt
@@ -1,4 +1,7 @@
 #add the executable target named HelloWorld
 add_executable(HelloWorld hello.cpp)
 target_link_libraries(HelloWorld PRIVATE basic)
-# one met que les librairies qui s'appelle basic
+# on ne met que les librairies qui s'appelle basic
+
+#install target helloworld
+install(TARGETS HelloWorld DESTINATION bin)
