--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,10 +1,10 @@
 # This starter workflow is for a CMake project running on multiple platforms. There is a different starter workflow if you just want a single platform.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
-name: CMake on multiple platforms
+name: CICD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "git CICD" ]
   pull_request:
     branches: [ "main" ]
 
