--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -41,7 +41,7 @@ jobs:
         cmake -B ${{ steps.strings.outputs.build-output-dir }}
         -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
         -DHELLOWORD_WITH_TESTS="ON"
-        -DHELLOWORD_WITH_EXECUTABLES = "OFF"
+        -DHELLOWORD_WITH_EXECUTABLES="OFF"
         -S ${{ github.workspace }}
 
     - name: Build
