--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -14,9 +14,9 @@ jobs:
           mkdir -p build
           cd build
           version="${GITHUB_REF##*/*/}"
-          echo ::set-output name=version::$version
+          echo "{version}={$version}" >> $GITHUB_OUTPUT
           cmake -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCPACK_PACKAGE_VERSION:STRING=$version -DCPACK_SYSTEM_NAME:STRING=linux-Release ..
-          cmake --build . --config ${{env.BUILD_TYPE}} 
+          cmake --build . --config ${{env.BUILD_TYPE}}
           cmake --build . --target package
       - name: Upload
         uses: softprops/action-gh-release@v1
