--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,4 +16,14 @@ jobs:
         cmake -DCMAKE8BUILD8TYPE=${{env.BUILD_TYPE}} ..
         cmake --build . --config ${{env.BUILD_TYPE}}
         ctest -C ${{env.BUILD_TYPE}}
-  
+  semantic-release:
+     runs-on: ubuntu-latest
+     needs: [build]
+     steps:
+     - uses: actions/che ckout@v4
+       with:
+         token: ${{ secrets.TOKEN}}
+     - name: Semantic Release
+       uses: cycjimmy/semantic-release-action@v4
+       env:
+         GITHUB_TOKEN: ${{ secrets.TOKEN}}
