--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,5 +25,7 @@ jobs:
          token: ${{ secrets.TOKEN }}
      - name: Semantic Release
        uses: cycjimmy/semantic-release-action@v4
+       with:
+         branch: main
        env:
          GITHUB_TOKEN: ${{ secrets.TOKEN}}
