--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,6 +26,7 @@ jobs:
      - name: Semantic Release
        uses: cycjimmy/semantic-release-action@v4
        with:
+         semantic_version: 15.13.28
          branch: main
        env:
          GITHUB_TOKEN: ${{ secrets.TOKEN}}
