--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -6,6 +6,10 @@ on:
 env:
   BUILD_TYPE: Release
 jobs:
+  format:
+    uses: Geode-solutions/actions/.github/workflows/format.yml@master
+    secrets:
+      TOKEN: ${{ secrets.TOKEN }}
   build:
     runs-on: ubuntu-latest
     steps:
