--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,7 @@ jobs:
       TOKEN: ${{ secrets.TOKEN }}
   build:
     runs-on: ubuntu-latest
+    needs: [format]
     steps:
     - uses: actions/checkout@v4
     - name: Configure CMake
